// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Render with value 1`] = `
<DocumentFragment>
  <div
    class="input default left"
  >
    <input
      type="text"
      value="Filter"
    />
  </div>
</DocumentFragment>
`;

exports[`Render with value of undefined 1`] = `
<DocumentFragment>
  <div
    class="input default left"
  >
    <input
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`Render with value set by setValue 1`] = `
<DocumentFragment>
  <div
    class="input default left"
  >
    <input
      type="text"
      value="New value"
    />
  </div>
</DocumentFragment>
`;
